manifests/apps/talos/paperless-ngx/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik-system
      sectionName: websecure 
  hostnames:
    - paperless.bigli.io
  rules:
    - backendRefs:
        - name: paperless-ngx
          port: 8000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-ngx-redirect
  namespace: paperless-ngx
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik-system
      sectionName: web
  hostnames:
    - paperless.bigli.io
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
